fix:新增参与者接听设备标记
